--- a/resources/en.lproj/Localizable.strings
+++ b/resources/en.lproj/Localizable.strings
@@ -1,6 +1,6 @@
 "README" = "README";
-"README:Go" = "miu~";
+"README:Go" = "Read Random Story";
 
-"GiveMeFive" = "Give Me 5";
+"GiveMeFive" = "Read";
 
 "VIEW" = "View";
