--- a/resources/zh-Hans.lproj/Localizable.strings
+++ b/resources/zh-Hans.lproj/Localizable.strings
@@ -1,6 +1,6 @@
 "README" = "读我";
-"README:Go" = "喵～";
+"README:Go" = "阅读随机文章";
 
-"GiveMeFive" = "Give Me 5";
+"GiveMeFive" = "我读";
 
 "VIEW" = "查看";
